[package]
name = "soroban-amm-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "27.0.0-rc.1"

[dev-dependencies]
soroban-sdk = { version = "27.0.0-rc.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = 0
codegen-units = 1
